--- a/arch/arm64/boot/dts/altera/socfpga_stratix10_socdk.dts
+++ b/arch/arm64/boot/dts/altera/socfpga_stratix10_socdk.dts
@@ -84,6 +84,7 @@
 &i2c1 {
 	status = "okay";
 	clock-frequency = <100000>;
+	refclk-frequency = <25000000>;
 
 	temp@4c {
 		compatible = "maxim,max1619";
