--- a/arch/arm64/boot/dts/altera/socfpga_stratix10.dtsi
+++ b/arch/arm64/boot/dts/altera/socfpga_stratix10.dtsi
@@ -728,7 +728,7 @@
 			compatible = "snps,dw-apb-timer";
 			interrupts = <0 113 4>;
 			reg = <0xffc03000 0x100>;
-			clock-frequency = <100000000>;
+			clocks = <&l4_sp_clk>;
 			clock-names = "timer";
 		};
 
@@ -736,7 +736,7 @@
 			compatible = "snps,dw-apb-timer";
 			interrupts = <0 114 4>;
 			reg = <0xffc03100 0x100>;
-			clock-frequency = <100000000>;
+			clocks = <&l4_sp_clk>;
 			clock-names = "timer";
 		};
 
@@ -744,7 +744,7 @@
 			compatible = "snps,dw-apb-timer";
 			interrupts = <0 115 4>;
 			reg = <0xffd00000 0x100>;
-			clock-frequency = <100000000>;
+			clocks = <&l4_sys_free_clk>;
 			clock-names = "timer";
 		};
 
@@ -752,7 +752,7 @@
 			compatible = "snps,dw-apb-timer";
 			interrupts = <0 116 4>;
 			reg = <0xffd00100 0x100>;
-			clock-frequency = <100000000>;
+			clocks = <&l4_sys_free_clk>;
 			clock-names = "timer";
 		};
 
@@ -762,7 +762,7 @@
 			interrupts = <0 108 4>;
 			reg-shift = <2>;
 			reg-io-width = <4>;
-			clock-frequency = <100000000>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
@@ -772,7 +772,7 @@
 			interrupts = <0 109 4>;
 			reg-shift = <2>;
 			reg-io-width = <4>;
-			clock-frequency = <100000000>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
