--- a/security/Kconfig
+++ b/security/Kconfig
@@ -47,6 +47,7 @@ config SECURITYFS
 
 config PAGE_TABLE_ISOLATION
 	bool "Remove the kernel mapping in user mode"
+	default y
 	depends on X86_64 && !UML
 	help
 	  This feature reduces the number of hardware side channels by
