gpu: add rt enable support for gpu driver
There is a switch for gpu's rt driver, add enable support when we
build a preempt-rt kernel.

Signed-off-by: Quanyang Wang <quanyang.wang@windriver.com>

--- a/drivers/mxc/gpu-viv/hal/os/linux/kernel/platform/freescale/gc_hal_kernel_platform_imx6.config
+++ b/drivers/mxc/gpu-viv/hal/os/linux/kernel/platform/freescale/gc_hal_kernel_platform_imx6.config
@@ -1,6 +1,10 @@
 EXTRA_CFLAGS += -DgcdDEFAULT_CONTIGUOUS_SIZE=~0U
 EXTRA_CFLAGS += -DgcdFSL_CONTIGUOUS_SIZE=134217728
 
+ifneq ($(CONFIG_PREEMPT_RT_FULL),)
+EXTRA_CFLAGS += -DgcdRT_KERNEL=1
+endif
+
 ifneq ($(CONFIG_ANDROID),)
 # build for android
 EXTRA_CFLAGS += -DgcdANDROID_NATIVE_FENCE_SYNC=2
