intel-socfpga: dts: add rsu node to enable rsu driver
Add a corresponding dts node in socfpga_stratix10.dtsi to enable
rsu drvier.

Signed-off-by: Meng Li <Meng.Li@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/arch/arm64/boot/dts/altera/socfpga_stratix10.dtsi
+++ b/arch/arm64/boot/dts/altera/socfpga_stratix10.dtsi
@@ -968,6 +968,9 @@
 				compatible = "intel,stratix10-svc";
 				method = "smc";
 				memory-region = <&service_reserved>;
+				rsu {
+					compatible = "intel,stratix10-rsu";
+				};
 			};
 		};
 	};
